# platformer

./: .gitignore  Cargo.toml  README.md  build.rs  config.toml  level.toml
docs/decisions/ecs_libraries/: decision.md  hecs_vs_legion.html  hecs_vs_shipyard.md
levels/: end.toml  level_2.toml  start.toml
resources/: config.toml
resources/levels/: end.toml  level_1.toml  level_2.toml  start.toml
src/: camera.rs  common.rs  components.rs  config.rs  controls.rs  game_state.rs  level.rs  main.rs  physics.rs
