[package]
name = "platformer"
version = "0.1.0"
authors = ["hardliner66 <hardliner66@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 2

[dependencies]
ggez = "0.5"
hecs = "0.2"
serde = "1.0.114"
serde_derive = "1.0.114"
toml = "0.5.6"
itertools = "0.9.0"

#rand = "0.7.3"
#rhai = "0.17.0"
#rand_distr = "0.2.2"
#perlin_noise = "1.0.1"
