[package]
name = "platformer"
version = "0.1.0"
authors = ["hardliner66 <hardliner66@gmail.com>"]
edition = "2018"
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 2

[dependencies]
ggez = "0.5.1"
hecs = "0.3.1"
serde = "1.0.117"
serde_derive = "1.0.117"
toml = "0.5.7"
itertools = "0.9.0"
maplit = "1.0.2"
string_cache = "0.8.0"

#rand = "0.7.3"
#rhai = "0.17.0"
#rand_distr = "0.2.2"
#perlin_noise = "1.0.1"
